add mongo statefulset

--- a/deploy/free5gc/amf-freediameter-configmap.yaml
+++ b/deploy/free5gc/amf-freediameter-configmap.yaml
@@ -5,10 +5,10 @@ metadata:
 data:
   amf.conf: |
     ### For reference, see `free5gc.conf`
-    db_uri: mongodb://localhost/free5gc
+    db_uri: mongodb://mongo-service.default.svc.cluster.local/free5gc
     
     logger:
-        file: /home/steven/free5gc-stage-1/install/var/log/free5gc/amf.log
+        file: /usr/src/free5gc-stage-1/install/var/log/free5gc/amf.log
         trace: 
             app: 1
             s1ap: 1
