--- a/deploy/free5gc/smf/deployment.yaml
+++ b/deploy/free5gc/smf/deployment.yaml
@@ -31,6 +31,8 @@ spec:
             - name: smf-freediameter-config
               mountPath: /usr/src/free5gc-stage-1/install/etc/free5gc/freeDiameter/smf.conf
               subPath: smf.conf
+          securityContext:
+            privileged: true
       volumes:
         - name: free5gc-config
           configMap: 
