--- a/deploy/kubeadm-config.yaml
+++ b/deploy/kubeadm-config.yaml
@@ -23,3 +23,7 @@ networking:
   # Depending on which network add-on is used, pod network CIDR might need to be set
   # podSubnet: 192.168.0.0/24
 scheduler: {}
+---
+apiVersion: kubelet.config.k8s.io/v1beta1
+kind: KubeletConfiguration
+resolvConf: /tmp/resolv.conf
