set mongo pv reclaim policy as retain

--- a/deploy/mongo/persistentvolume.yaml
+++ b/deploy/mongo/persistentvolume.yaml
@@ -7,7 +7,7 @@ spec:
     storage: 20Gi
   accessModes:
     - ReadWriteMany
-  persistentVolumeReclaimPolicy: Recycle
+  persistentVolumeReclaimPolicy: Retain
   nfs:
     path: /nfsshare
     server: 127.0.0.1
