--- a/helm-charts/free5gc/charts/upf/templates/bridge-net-attach-def.yaml
+++ b/helm-charts/free5gc/charts/upf/templates/bridge-net-attach-def.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.enableMininet }}
+{{- if .Values.global.enableMininet }}
 apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition
 metadata:
