--- a/helm-charts/free5gc/charts/webui/values.yaml
+++ b/helm-charts/free5gc/charts/webui/values.yaml
@@ -1,11 +1,11 @@
-# Default values for upf.
+# Default values for webui.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: steven30801/free5gc-build
+  repository: steven30801/free5gc-webui
   tag: latest
   pullPolicy: IfNotPresent
 
@@ -13,16 +13,15 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
-pfcp:
-  addr: 192.168.2.6
-gtpu:
-  subnet: 192.168.2.0/24
-  addr: 192.168.2.6
-
 podSecurityContext: {}
 
-securityContext: 
-  privileged: true
+securityContext: {}
+
+service:
+  webuiServiceType: NodePort
+  webui:
+    port: 3000
+    nodePort: 30300
 
 resources: {}
 
