--- a/helm-charts/mongo/templates/service.yaml
+++ b/helm-charts/mongo/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "mongo.fullname" . }}-service
+  name: {{ include "mongo.fullname" . }}
   labels:
     {{- include "mongo.labels" . | nindent 4 }}
 spec:
