--- a/helm-charts/free5gc/values.yaml
+++ b/helm-charts/free5gc/values.yaml
@@ -4,21 +4,31 @@
 
 global:
   dbUri: mongodb://mongo.default.svc.cluster.local/free5gc
+  freediameter:
+    amf:
+      addr: 192.168.2.2
+    hss:
+      addr: 192.168.2.3
+    smf:
+      addr: 192.168.2.4
+    pcrf:
+      addr: 192.168.2.5
   enableMininet: false
 
 amf:
-  s1ap:
-    addr: 192.168.2.2
+  addr: 192.168.2.2
+
+hss:
+  addr: 192.168.2.3
 
 smf:
-  pfcp:
-    addr: 192.168.2.4
-  http:
-    addr: 192.168.2.4
+  addr: 192.168.2.4
+
+pcrf:
+  addr: 192.168.2.5
 
 upf:
   pfcp:
     addr: 192.168.2.6
   gtpu:
-    subnet: 192.168.2.0/24
     addr: 192.168.2.6
