--- a/deploy/mininet/deployment.yaml
+++ b/deploy/mininet/deployment.yaml
@@ -20,8 +20,7 @@ spec:
         - name: mininet
           image: andybavier/mininet:1.0.0
           imagePullPolicy: IfNotPresent
-          command: ["/bin/bash"]
-          args: ["-c", "chmod a+x /toposcripts/topo.py && /toposcripts/topo.py"]
+          args: ["/toposcripts/topo.py"]
           stdin: true
           tty: true
           volumeMounts:
