--- a/helm-charts/onos-app/values.yaml
+++ b/helm-charts/onos-app/values.yaml
@@ -1,33 +1,27 @@
-# Default values for mininet.
+# Default values for onos-app.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  ovs:
-    repository: andybavier/mininet
-    tag: 1.0.0
-  bmv2:
-    repository: steven30801/bmv2-mininet
-    tag: latest
+  repository: steven30801/onos-app-job
+  tag: latest
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
-topo: topo.py
-numIntfs: 2
-onosOpenflowService: onos-openflow.default.svc.cluster.local
 onosGuiService: onos-gui.default.svc.cluster.local
 
-bandwidthManagement: false
+appCommand: ""
+appName: ""
+appFile: ""
 
 podSecurityContext: {}
 
-securityContext:
-  privileged: true
+securityContext: {}
 
 resources: {}
 
