--- a/helm-charts/configs/bans-5gc-bmv2.yaml
+++ b/helm-charts/configs/bans-5gc-bmv2.yaml
@@ -49,4 +49,4 @@ topo: topo-bmv2.py
 # in onos chart
 env:
   - name: ONOS_APPS
-    value: "drivers,fwd"
+    value: "drivers,fwd,hostprovider,proxyarp"
