--- a/helm-charts/onos/values.yaml
+++ b/helm-charts/onos/values.yaml
@@ -5,8 +5,13 @@
 replicaCount: 1
 
 image:
-  repository: onosproject/onos
-  tag: 1.15.0
+  ovs:
+    repository: onosproject/onos
+    tag: 1.15.0
+  bmv2:
+    # private repository
+    repository: steven30801/onos
+    tag: latest
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
