--- a/deploy/free5gc/upf/deployment.yaml
+++ b/deploy/free5gc/upf/deployment.yaml
@@ -22,7 +22,7 @@ spec:
           image: steven30801/free5gc-build:latest
           imagePullPolicy: IfNotPresent
           command: ["/bin/bash"]
-          args: ["-c", "/root/setup.sh && /usr/src/free5gc-stage-1/free5gc-upfd"]
+          args: ["-c", "/root/setup.sh && ethtool -K net1 tx off && /usr/src/free5gc-stage-1/free5gc-upfd"]
           stdin: true
           tty: true
           volumeMounts:
