--- a/helm-charts/free5gc/values.yaml
+++ b/helm-charts/free5gc/values.yaml
@@ -16,7 +16,10 @@ global:
   enableMininet: false
 
 amf:
-  addr: 192.168.2.2
+  http:
+    addr: 192.168.2.2
+  s1ap:
+    addr: 192.168.2.2
 
 hss:
   addr: 192.168.2.3
