--- a/helm-charts/free5gc/charts/amf/templates/deployment.yaml
+++ b/helm-charts/free5gc/charts/amf/templates/deployment.yaml
@@ -14,7 +14,7 @@ spec:
       labels:
         {{- include "amf.selectorLabels" . | nindent 8 }}
       annotations:
-        cni.projectcalico.org/ipAddrs: "[\"{{ .Values.addr }}\"]"
+        cni.projectcalico.org/ipAddrs: "[\"{{ .Values.http.addr }}\"]"
     spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
