--- a/helm-charts/free5gc/charts/amf/values.yaml
+++ b/helm-charts/free5gc/charts/amf/values.yaml
@@ -13,7 +13,10 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
-addr: 192.168.2.2
+http:
+  addr: 192.168.2.2
+s1ap:
+  addr: 192.168.2.2
 
 podSecurityContext: {}
 
