bans-5gc-sriov deployment

--- a/deploy/sriov-configmap.yaml
+++ b/deploy/sriov-configmap.yaml
@@ -9,7 +9,7 @@ data:
         "resourceList": [{
                 "resourceName": "sriov_net",
                 "selectors": {
-                    "pfName": ["SRIOV_INTF"]
+                    "pfName": ["PF_NAME#0-LAST_VF"]
                 }
             }
         ]
