--- a/helm-charts/configs/bans-5gc-ovs.yaml
+++ b/helm-charts/configs/bans-5gc-ovs.yaml
@@ -10,6 +10,7 @@ global:
     pcrf:
       addr: 192.168.2.5
   enableMininet: true
+  enableSriov: false
   # bridge between mininet and enodeb
   mnEnbBridge:
     subnet: 192.168.4.0/24
