--- a/helm-charts/free5gc/charts/amf/values.yaml
+++ b/helm-charts/free5gc/charts/amf/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: steven30801/free5gc-build
-  tag: latest
+  tag: stage-1
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
