--- a/deploy/free5gc/pcrf/deployment.yaml
+++ b/deploy/free5gc/pcrf/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: pcrf
-          image: steven30801/free5gc-build:latest
+          image: steven30801/free5gc-build:stage-1
           imagePullPolicy: IfNotPresent
           command: ["/bin/bash"]
           args: ["-c", "/usr/src/free5gc-stage-1/nextepc-pcrfd"]
