--- a/helm-charts/free5gc-stage-2/charts/nrf/templates/configmap.yaml
+++ b/helm-charts/free5gc-stage-2/charts/nrf/templates/configmap.yaml
@@ -14,7 +14,7 @@ data:
       DefaultServiceIP: "{{ .Values.global.dbServiceDomain }}"
       sbi:
         scheme: https
-        ipv4Addr: {{ .Values.addr }}
+        ipv4Addr: {{ .Values.http.addr }}
         port: 29510
       DefaultPlmnId:
         mcc: "208"
