--- a/helm-charts/configs/bans-5gcv2.yaml
+++ b/helm-charts/configs/bans-5gcv2.yaml
@@ -9,25 +9,36 @@ amf:
     addr: 192.168.2.2
 
 ausf:
-  addr: 192.168.2.3
+  http:
+    addr: 192.168.2.3
 
 nrf:
-  addr: 192.168.2.4
+  http:
+    addr: 192.168.2.4
 
 nssf:
-  addr: 192.168.2.5
+  http:
+    addr: 192.168.2.5
 
 pcf:
-  addr: 192.168.2.6
+  http:
+    addr: 192.168.2.6
 
 smf:
-  addr: 192.168.2.7
+  http:
+    addr: 192.168.2.7
+  pfcp:
+    addr: 192.168.2.7
+    upfAddr: 192.168.2.10
 
 udm:
-  addr: 192.168.2.8
+  http:
+    addr: 192.168.2.8
+    udrAddr: 192.168.2.9
 
 udr:
-  addr: 192.168.2.9
+  http:
+    addr: 192.168.2.9
 
 upf:
   pfcp:
