--- a/helm-charts/free5gc-stage-2/charts/amf/values.yaml
+++ b/helm-charts/free5gc-stage-2/charts/amf/values.yaml
@@ -1,4 +1,4 @@
-# Default values for nrf.
+# Default values for amf.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -14,7 +14,9 @@ nameOverride: ""
 fullnameOverride: ""
 
 http:
-  addr: 192.168.2.4
+  addr: 192.168.2.2
+ngap:
+  addr: 192.168.2.2
 
 podSecurityContext: {}
 
