--- a/helm-charts/free5gc-stage-2/charts/udr/Chart.yaml
+++ b/helm-charts/free5gc-stage-2/charts/udr/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: nrf
-description: A Helm chart for NRF
+name: udr
+description: A Helm chart for UDR
 type: application
 version: 1.0.0
 appVersion: 2.0.2
