--- a/helm-charts/free5gc-stage-2/charts/udr/templates/deployment.yaml
+++ b/helm-charts/free5gc-stage-2/charts/udr/templates/deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "nrf.fullname" . }}
+  name: {{ include "udr.fullname" . }}
   labels:
-    {{- include "nrf.labels" . | nindent 4 }}
+    {{- include "udr.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      {{- include "nrf.selectorLabels" . | nindent 6 }}
+      {{- include "udr.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        {{- include "nrf.selectorLabels" . | nindent 8 }}
+        {{- include "udr.selectorLabels" . | nindent 8 }}
       annotations:
         cni.projectcalico.org/ipAddrs: "[\"{{ .Values.http.addr }}\"]"
     spec:
@@ -25,25 +25,25 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ["/bin/bash"]
-          args: ["-c", "./bin/nrf"]
+          args: ["-c", "./bin/udr"]
           stdin: true
           tty: true
           volumeMounts:
             - name: free5gc-config
               mountPath: /go/src/free5gc/config/free5GC.conf
               subPath: free5GC.conf
-            - name: nrf-config
-              mountPath: /go/src/free5gc/config/nrfcfg.conf
-              subPath: nrfcfg.conf
+            - name: udr-config
+              mountPath: /go/src/free5gc/config/udrcfg.conf
+              subPath: udrcfg.conf
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
         - name: free5gc-config
           configMap:
             name: free5gc-configmap
-        - name: nrf-config
+        - name: udr-config
           configMap:
-            name: nrf-configmap
+            name: udr-configmap
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
