--- a/helm-charts/free5gc-stage-1/charts/webui/values.yaml
+++ b/helm-charts/free5gc-stage-1/charts/webui/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: steven30801/free5gc-webui
-  tag: stage-1
+  tag: v1
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
