set free5gc image with helm global values

--- a/helm-charts/free5gc-stage-2/charts/upf/templates/deployment.yaml
+++ b/helm-charts/free5gc-stage-2/charts/upf/templates/deployment.yaml
@@ -22,7 +22,7 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: {{ include "upf.image" . | quote }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ["/bin/bash"]
           args: ["-c", "/root/setup.sh && cd src/upf/build && ./bin/free5gc-upfd"]
