--- a/helm-charts/free5gc-stage-2/charts/webui/templates/deployment.yaml
+++ b/helm-charts/free5gc-stage-2/charts/webui/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: {{ include "webui.image" . | quote }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ["/bin/bash"]
           args: ["-c", "cd webconsole && go run server.go --webuicfg webuicfg.conf"]
