--- a/helm-charts/free5gc-stage-2/charts/smf/templates/deployment.yaml
+++ b/helm-charts/free5gc-stage-2/charts/smf/templates/deployment.yaml
@@ -22,7 +22,7 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: {{ include "smf.image" . | quote }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ["/bin/bash"]
           args: ["-c", "./bin/smf"]
