--- a/helm-charts/free5gc-stage-2/values.yaml
+++ b/helm-charts/free5gc-stage-2/values.yaml
@@ -6,7 +6,8 @@ global:
   image:
     free5gc: {}
   dbServiceDomain: mongo.default.svc.cluster.local
-  nrfAddr: 192.168.2.4
+  nrf:
+    addr: 192.168.2.4
 
 amf:
   http:
@@ -35,12 +36,14 @@ smf:
     addr: 192.168.2.7
   pfcp:
     addr: 192.168.2.7
-    upfAddr: 192.168.2.10
+  upf:
+    addr: 192.168.2.10
 
 udm:
   http:
     addr: 192.168.2.8
-    udrAddr: 192.168.2.9
+  udr:
+    addr: 192.168.2.9
 
 udr:
   http:
