fix upf wrong config file extension

--- a/helm-charts/free5gc-stage-2/charts/upf/templates/configmap.yaml
+++ b/helm-charts/free5gc-stage-2/charts/upf/templates/configmap.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: upf-configmap
 data:
-  upfcfg.conf: |
+  upfcfg.yaml: |
     info:
       version: 1.0.0
       description: UPF configuration
