--- a/helm-charts/free5gc-stage-2/charts/upf/templates/deployment.yaml
+++ b/helm-charts/free5gc-stage-2/charts/upf/templates/deployment.yaml
@@ -33,8 +33,8 @@ spec:
               mountPath: /go/src/free5gc/config/free5GC.conf
               subPath: free5GC.conf
             - name: upf-config
-              mountPath: /go/src/free5gc/src/upf/build/config/upfcfg.conf
-              subPath: upfcfg.conf
+              mountPath: /go/src/free5gc/src/upf/build/config/upfcfg.yaml
+              subPath: upfcfg.yaml
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
