--- a/deploy/kubeadm-config.yaml
+++ b/deploy/kubeadm-config.yaml
@@ -2,7 +2,7 @@
 apiServer:
   extraArgs:
     # https://kubernetes.io/docs/concepts/services-networking/service/#sctp
-    feature-gates: "SCTPSupport=true"
+    # feature-gates: "SCTPSupport=true"
   timeoutForControlPlane: 4m0s
 apiVersion: kubeadm.k8s.io/v1beta2
 certificatesDir: /etc/kubernetes/pki
