add helm hooks to ensure upf is started before smf for stage 2

--- a/helm-charts/free5gc-stage-2/charts/smf/templates/deployment.yaml
+++ b/helm-charts/free5gc-stage-2/charts/smf/templates/deployment.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ include "smf.fullname" . }}
   labels:
     {{- include "smf.labels" . | nindent 4 }}
+  annotations:
+    "helm.sh/hook-weight": "5"
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
