--- a/helm-charts/free5gc-stage-2/charts/upf/templates/configmap.yaml
+++ b/helm-charts/free5gc-stage-2/charts/upf/templates/configmap.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: upf-configmap
+  annotations:
+    "helm.sh/hook-weight": "-5"
 data:
   upfcfg.yaml: |
     info:
